fixed hearder to look nice on safari

--- a/figenre/static/sass/style.scss
+++ b/figenre/static/sass/style.scss
@@ -70,7 +70,7 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin: 32px 64px 32px 64px;
+  margin: 3% auto;
 }
 .header .logo-link {
   width: 40%;
@@ -79,18 +79,23 @@ body {
 }
 }
 .header .socials {
-  margin-right: 10%;
   display: flex;
   justify-content: space-evenly;
   width: 30%;
+  height: 30%;
+  margin-top: 3%;
 }
 .header .image-link-cont{
   display: flex;
   align-self: center;
+  width: 30%;
+  height: 30%;
 }
 .image-link {
-  width: 40px;
+  width: 50%;
+  height: 50%;
   object-fit: cover;
+  align-content: center;
 }
 .image-link:hover {
   transform: scale(1.1);
@@ -107,6 +112,33 @@ button {
 }
 button .auth-link {
   text-decoration: none;
+}
+
+// -- responsive header
+@media screen and (max-width:600px){
+  .header {
+    flex-direction: column;
+    align-items: center;
+  }
+  .header .logo-link {
+    margin: 2%;
+
+  }
+  .header .socials {
+    width: 80%;
+    height: 80%;
+    margin: 2%;
+    align-items: center;
+  }
+  .header .image-link-cont {
+    width: 100%;
+    height: 100%;
+    //margin: auto;
+    padding-left: 10%;
+  }
+  .header .image-link {
+    width: 70%;
+  }
 }
 
 // -------- login button and effect -----
